fix alignment for wp.de banners

--- a/fundraising/sensitive/css/common-banner.css
+++ b/fundraising/sensitive/css/common-banner.css
@@ -5,6 +5,7 @@
 /*for mobile page*/
 #WMDE_Banner div {
     box-sizing: content-box;
+    text-align: left;
 }
 
 #WMDE_Banner td {
